--- a/work-django/main/templates/main/index.html
+++ b/work-django/main/templates/main/index.html
@@ -13,36 +13,36 @@
     Каталог
   </h1>
   <div class="cards">
-    <a href="http://127.0.0.1:8000/sneakers">
+    <a href="http://127.0.0.1:8000/Кроссовки">
       <div class="card1">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
         <p>Кроссовки</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/boots">
+    <a href="http://127.0.0.1:8000/Ботинки">
       <div class="card2">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
         <p>Ботинки</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/bags">
+    <a href="http://127.0.0.1:8000/Сумки">
       <div class="card3">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
         <p>Сумки</p>
       </div>
-    <a href="http://127.0.0.1:8000/perfumery">
+    <a href="http://127.0.0.1:8000/Парфюмерия">
       <div class="card4">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
         <p>Парфюмерия</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/accessories">
+    <a href="http://127.0.0.1:8000/Аксессуары">
       <div class="card5">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
         <p>Аксессуары</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/sunglasses">
+    <a href="http://127.0.0.1:8000/Солнечные очки">
       <div class="card6">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
         <p>Солнечные очки</p>
