--- a/work-django/main/static/css/style-prod-catalog.css
+++ b/work-django/main/static/css/style-prod-catalog.css
@@ -10,6 +10,9 @@ a{
 img{
   width: 100%;
 }
+.back-button{
+  margin-left: 10px;
+}
 .search-container>input{
   width: 90%;
   height: 50%;
@@ -53,6 +56,7 @@ h1{
   box-shadow: 0px 2px lightgray;
   margin:1em
 }
+/*
 .a{
   grid-column: 1/2;
   grid-row: 1/2;
@@ -84,7 +88,7 @@ h1{
 .h{
   grid-column: 2/3;
   grid-row: 4/5;
-}
+}*/
 .product-name{
   font-weight: bold;
   font-size: 20px;
