--- a/work-django/main/templates/main/index.html
+++ b/work-django/main/templates/main/index.html
@@ -13,38 +13,38 @@
     Каталог
   </h1>
   <div class="cards">
-    <a href="http://127.0.0.1:8000/Кроссовки">
+    <a href={{url}}/Кроссовки>
       <div class="card1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
+        <img src="{% static "imagecategory/im.png" %}" alt="">
         <p>Кроссовки</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/Ботинки">
+    <a href={{url}}/Ботинки>
       <div class="card2">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
+        <img src="{% static "imagecategory/im.png" %}" alt="">
         <p>Ботинки</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/Сумки">
+    <a href={{url}}/Сумки>
       <div class="card3">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
+        <img src="{% static "imagecategory/im.png" %}" alt="">
         <p>Сумки</p>
       </div>
-    <a href="http://127.0.0.1:8000/Парфюмерия">
+    <a href={{url}}/Парфюмерия>
       <div class="card4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
+        <img src="{% static "imagecategory/im.png" %}" alt="">
         <p>Парфюмерия</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/Аксессуары">
+    <a href={{url}}/Аксессуары>
       <div class="card5">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
+        <img src="{% static "imagecategory/im.png" %}" alt="">
         <p>Аксессуары</p>
       </div>
     </a>
-    <a href="http://127.0.0.1:8000/Солнечные очки">
+    <a href={{url}}/Солнечные очки>
       <div class="card6">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Linecons_white-t-shirt.svg/1200px-Linecons_white-t-shirt.svg.png" alt="">
+        <img src="{% static "imagecategory/im.png" %}" alt="">
         <p>Солнечные очки</p>
       </div>
     </a>
