--- a/work-django/main/static/css/style-prod-catalog.css
+++ b/work-django/main/static/css/style-prod-catalog.css
@@ -6,14 +6,62 @@ body{
 a{
   text-decoration: none;
 }
-
+h1{
+  font-size: 4em;
+}
 img{
   width: 100%;
 }
-.back-button{
-  margin-left: 10px;
+input::placeholder{
+  text-align: center;
 }
-.search-container>input{
+.back-button{
+  margin-left: 20px;
+  font-size: 40px;
+}
+.form-container{
+  margin-left: 20px;
+}
+.search_container{
+  display: flex;
+}
+.search-but{
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: #eee;
+  border: 1px solid #bdbdbd;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  border-radius: .25rem;
+  transition: background-color .15s ease-in-out;
+}
+.search-but:hover{
+   background-color: #bdbdbd;
+}
+.search_container .search-input{
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  position: relative;
+  width: 90%;
+  z-index: 2;
+  font-size: 20px;
+}
+.search_container .search-but{
+  position: relative;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-left-width: 0;
+  width: 10%;
+}
+/*.search-container>form>input{
   width: 90%;
   height: 50%;
   border-style: solid;
@@ -21,23 +69,46 @@ img{
   border-width: 0.1px;
   border-radius: 55px;
   font-size: 60px;
+  place-content: center;
 }
+.search-container>form>button{
+  height: 100%;
+  font-weight: bold;
+}*/
 .main-container{
   display: grid;
   grid-template-rows: repeat(20,1fr);
   grid-template-columns: repeat(1,1fr);
 }
 h1{
-  margin-left: 0.5em;
+  margin-left: 20px;
   grid-row: 1/3;
   display: flex;
   align-items: center;
 }
-.search-container{
+/*.search-container{
   margin-left: 1em;
   grid-row: 4/6;
   align-items: center;
   width: 95%;
+}*/
+.form-next-pre{
+  text-align: center;
+}
+.next, .pre{
+  background-color: white;
+  height: 3em;
+  border-style: solid;
+  border-color: #212529;
+  border-radius: 15px;
+  font-weight: bold;
+  margin-inline: 5px;
+}
+.bu{
+  margin-top: 90px;
+}
+.bu:hover{
+  background-color: #555555;
 }
 .products-container{
   display: grid;
@@ -93,48 +164,12 @@ h1{
   font-weight: bold;
   font-size: 20px;
 }
-.product-name, .product-price{
-  margin-left: 10px;
-}
-.button-basket{
-  text-align: center;
-}
-.button-basket>button{
-  width: 70%;
-  padding: 0;
-  border-style: none;
-  background-color: #dee8ef;
-  border-radius: 15px;
-  cursor: pointer;
-  margin-bottom: 10px;
-  transition: background-color 0.5s;
-}
-.button-basket p{
-  padding: 0;
-  align-items: center;
-  font-size: 2em;
-}
 .text-menu{
   display: flex;
 }
-.plus{
-  padding: 0;
-  width: 20%;
-  background-color: lightgray;
-  transition: background-color 0.5s;
-}
-.basket{
-  width:70%;
-}
-.button-basket>button:hover{
-  background-color: #bcc6cd;
-  .plus{
-    background-color: darkgrey;
-  }
-}
-.search-container>input:hover{
+/*.search-container>input:hover{
   border-color: grey;
   border-width: 0.5px;
-}
+}*/
 
 
