--- a/work-django/main/templates/main/prodcatalog.html
+++ b/work-django/main/templates/main/prodcatalog.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <h1>Каталог</h1>
         <div class="back-button">
-             <a href="http://127.0.0.1:8000/" ><h2 style="color: #555555">&laquo;</h2></a>
+             <a href="http://195.43.142.204:8000/" ><h2 style="color: #555555">&laquo;</h2></a>
         </div>
         <div class="form-container">
             <form method="POST" action="">
@@ -53,7 +53,7 @@
             </form>
             <div class="products-container">
                     {% for prod in products %}
-                        <a href=/categories/{{prod.category}}/names/{{prod.name}}>
+                        <a href=/categories/{{prod.category}}/{{prod.id}}>
                           <div class="product-container">
                             <img src={{  prod.image0.url }} alt="">
                               <div style="text-align: center" class="text-block">
