--- a/work-django/main/static/css/style-prod-card.css
+++ b/work-django/main/static/css/style-prod-card.css
@@ -20,47 +20,52 @@ button{
 .product-card-container{
     display: grid;
     grid-template-columns: repeat(10,1fr);
-    grid-template-rows: repeat(9,1fr);
+    grid-template-rows: repeat(6,1fr);
     align-items: center;
     justify-items: center;
 }
 .back-button{
+    grid-row:1/2;
     grid-column: 1/2;
+    align-self: start;
 }
 .img-container{
     overflow: hidden;
     text-align: center;
     width: 100%;
-    grid-column: 3/9;
-    grid-row: 2/7;
+    grid-column: 1/3;
+    grid-row: 1/2;
 }
 .slide-back{
     margin-right: 5px;
     grid-column: 2/3;
-    grid-row: 4/5;
+    grid-row: 1/2;
 }
 .slide-next{
     margin-left: 5px;
     grid-column: 9/10;
-    grid-row: 4/5;
+    grid-row: 1/2;
 }
 .image-slide{
     display: none;
 }
 .name-card{
     text-align: center;
-    grid-row: 7/8;
+    grid-row: 1/2;
     grid-column: 4/8;
+    align-self: end;
 }
 .description-card{
     text-align: center;
-    grid-row: 8/9;
-    grid-column: 4/8;
+    grid-row: 2/3;
+    align-self: start;
+    grid-column: 3/9;
 }
 .price-card{
     text-align: center;
-    grid-row: 9/10;
+    grid-row: 3/4;
     grid-column: 4/8;
+    align-self: start;
 }
 .image-slide:first-child{
     display: block;
