--- a/work-django/main/static/css/style-prod-catalog.css
+++ b/work-django/main/static/css/style-prod-catalog.css
@@ -82,7 +82,8 @@ input::placeholder{
 }
 h1{
   margin-left: 20px;
-  grid-row: 1/3;
+  grid-row: 1/2;
+  align-self: start;
   display: flex;
   align-items: center;
 }
@@ -106,6 +107,7 @@ h1{
 }
 .bu{
   margin-top: 90px;
+  -webkit-text-fill-color: black;
 }
 .bu:hover{
   background-color: #555555;
@@ -125,7 +127,6 @@ h1{
   border-width: 0.1px;
   border-radius: 15px;
   box-shadow: 0px 2px lightgray;
-  margin:1em
 }
 /*
 .a{
