--- a/work-django/main/templates/main/prodcatalog.html
+++ b/work-django/main/templates/main/prodcatalog.html
@@ -9,21 +9,21 @@
     <link rel="stylesheet" href="{% static "css/style-prod-catalog.css" %}">
 </head>
 <body>
-    <div class="main-container">
-        <h1>Каталог</h1>
-        <div class="back-button">
-             <a href="http://195.43.142.204:8000/" ><h2 style="color: #555555">&laquo;</h2></a>
-        </div>
-        <div class="form-container">
-            <form method="POST" action="">
-                {% csrf_token %}
-                <div class="search_container">
-                    <input class="search-input" name="search-str" type="text" placeholder="Найти...">
-                    <button class="search-but" name="search-name" type="submit">&raquo;</button>
-                </div>
-            </form>
-        </div>
-        {% if check %}
+        <div class="main-container">
+            <h1>Каталог</h1>
+            <div class="back-button">
+                 <a href="http://195.43.142.204:8000/" ><h2 style="color: #555555">&laquo;</h2></a>
+            </div>
+        {%if check%}
+            <div class="form-container">
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <div class="search_container">
+                        <input class="search-input" name="search-str" type="text" placeholder="Найти...">
+                        <button class="search-but" name="search-name" type="submit">&raquo;</button>
+                    </div>
+                </form>
+            </div>
             <form class="form-next-pre" method="POST" action="">
                 {% csrf_token %}
                         {% if pre > 0 %}
@@ -51,14 +51,14 @@
                           margin-inline: 5px;
                           ">Женские</button>
             </form>
-            <div class="products-container">
+            <div class="products-container" style="align-items: start">
                     {% for prod in products %}
                         <a href=/categories/{{prod.category}}/{{prod.id}}>
-                          <div class="product-container">
+                          <div class="product-container" >
                             <img src={{  prod.image0.url }} alt="">
                               <div style="text-align: center" class="text-block">
                                 <div class="product-name">
-                                    <p>{{prod.name}} </p>
+                                    <p style="font-size:0.6em">{{prod.name}} </p>
                                 </div>
                                 <div class="product-price">
                                     <p>{{prod.price}} рублей</p>
@@ -67,10 +67,10 @@
                           </div>
                         </a>
                     {%endfor%}
+            </div>
         {% else %}
-            <h1>Извините! Товаров не обнаружено</h1>
+            <h2 class="text_failed">Извините! Товаров не обнаружено</h2>
         {%endif%}
         </div>
-    </div>
 </body>
 </html>
