--- a/work-django/main/templates/main/prodcatalog.html
+++ b/work-django/main/templates/main/prodcatalog.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="{% static "css/style-prod-catalog.css" %}">
 </head>
 <body>
-        <div class="main-container">
+        <div class="main-container">ёё
             <h1>Каталог</h1>
             <div class="back-button">
-                 <a href="http://195.43.142.204:8000/" ><h2 style="color: #555555">&laquo;</h2></a>
+                 <a href="http://194.87.210.247:8000/" ><h2 style="color: #555555">&laquo;</h2></a>
             </div>
         {%if check%}
             <div class="form-container">
